--- a/src/pages/Home/Home.css
+++ b/src/pages/Home/Home.css
@@ -82,7 +82,7 @@ body {
 
 .about-me {
     margin: 0 auto;
-    max-width: 95%;
+    max-width: 90%;
     font-weight:600;
 }
 
